...

  final List<Pedido> pedidos;

  @override
  Widget build(BuildContext context) {
    return ListView.separated(
      key: const Key('pedidos_lista'),
      physics: const AlwaysScrollableScrollPhysics(),
      itemCount: pedidos.length,
      separatorBuilder: (context, index) => const Divider(height: 1),
      itemBuilder: (context, index) {
        final pedido = pedidos[index];
        return ListTile(
...
